# rag-production-kit

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  decision-revisit.yml  feature.yml  trending.yml
.github/workflows/: ci.yml  eval.yml
.skills/portfolio-memory/: SKILL.md
.skills/portfolio-session/: SKILL.md
MEMORY/: core_decisions_ai.md  core_decisions_human.md  full_history_ai.md  full_history_human.md
demo/nextjs/: README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
demo/nextjs/app/: globals.css  layout.tsx  page.tsx
demo/nextjs/app/api/stream/: route.ts
demo/nextjs/components/: demo-client.tsx
demo/nextjs/lib/: corpus.ts  streamer.ts
demo/nextjs/test/: corpus.test.ts  stream-route.test.ts  streaming-client-cleanup.test.ts
demo/streaming/: app.js  index.html  server.py
docs/: architecture.md  benchmarks.md
evals/: __init__.py  run_eval.py
evals/baselines/: faithfulness.json  recall_at_5.json
evals/calibration/: faithfulness.jsonl
evals/current/: correctness.json
evals/dataset/: corpus_v1.jsonl  rag_qa_v1.jsonl
infra/postgres/: init.sql
rag_kit/: __init__.py  db.py  embedder.py  fusion.py  generator.py  indexer.py  io_utils.py  reranker.py  retriever.py  rewriter.py  streaming.py  telemetry.py
scripts/: bench_rewriter.py  bench_streaming.py  capture_demo.py  capture_demo.sh  telemetry_dashboard.py
tests/: conftest.py  test_architecture_doc.py  test_atomic_write.py  test_bench_rewriter_md_escaping.py  test_bench_streaming.py  test_capture_demo_smoke.py  test_db_to_pgvector.py  test_deferred_validation_sweep.py  test_embedder.py  test_eval_bench_snapshot.py  test_eval_run.py  test_fusion.py  test_generator.py  test_hybrid_pg.py  test_public_surface.py  test_readme_decision_range.py  test_readme_what_this_is_lists_shipped_layers.py  test_reranker.py  test_retriever_rewriter.py  test_rewriter.py  test_rewriter_bench_snapshot.py  test_streaming.py  test_telemetry.py  test_telemetry_dashboard_json.py  test_telemetry_dashboard_stats.py  test_telemetry_dump.py  test_workflows_concurrency.py  test_workflows_timeout_minutes.py  test_workflows_yaml_parseable.py
